<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fastrtps_pubsub</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="y-okumura@todo.todo">y-okumura</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_typesupport_fastrtps_cpp</build_depend>
  <build_depend>layer_pubsub_common</build_depend>

  <build_export_depend>fastrtps_cmake_module</build_export_depend>
  <build_export_depend>fastrtps</build_export_depend>
  <build_export_depend>fastcdr</build_export_depend>
  <build_export_depend>FastRTPS</build_export_depend>
  <build_export_depend>rmw_fastrtps_cpp</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message</exec_depend>

</package>
