<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>two_way</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hasegawa@isp.co.jp">hasegawa</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <build_depend>rclcpp_pubsub</build_depend>
  <build_depend>rcl_pubsub</build_depend>
  <build_depend>rmw_pubsub</build_depend>
  <build_depend>fastrtps_pubsub</build_depend>
  <build_depend>osrf_testing_tools_cpp</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <exec_depend>rclcpp_pubsub</exec_depend>
  <exec_depend>rcl_pubsub</exec_depend>
  <exec_depend>rmw_pubsub</exec_depend>
  <exec_depend>fastrtps_pubsub</exec_depend>
</package>
